ubiquity (2.6.3) UNRELEASED; urgency=low

  * Clean up after the langpacks state on multiple runs of the installer.
  * Prefer biggest_free over resize always now that we make sure the
    biggest_free choice offers at least 5GB (LP: #758236, LP: #652852).

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 12 Apr 2011 10:14:14 +0100

ubiquity (2.6.2) natty; urgency=low

  [ Colin Watson ]
  * Handle keyboard layouts with only one variant (LP: #711926).
  * Make sure to set a new variant default when changing keyboard layout
    (LP: #745137).

  [ Evan Dandrea ]
  * Deal with the confirmation key being translated in jockey-text
    (LP: #757208).
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 11 Apr 2011 17:51:12 +0100

ubiquity (2.6.1) natty; urgency=low

  [ Stéphane Graber ]
  * KDE frontend:
    - Disable partition edit dialog on row activation, until such time as we
      know how to distinguish click from double-click (LP: #628906).

  [ Colin Watson ]
  * Automatic update of included source packages: localechooser 2.34ubuntu4,
    partman-auto 93ubuntu14.
  * Update translations from Launchpad.
  * Add ${misc:Depends} to dependencies of ubiquity-ubuntu-artwork and
    oem-config-remaster.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Apr 2011 02:22:28 +0100

ubiquity (2.6.0) natty; urgency=low

  [ Evan Dandrea ]
  * Provide a better description for the upgrade/reinstall option that
    intends to make the difference between it and a traditional Ubuntu
    upgrade clear (LP: #752372).
  * Don't show the biggest_free option if we can't fit Ubuntu in the
    free space (LP: #751145).
  * Try calling unlock_environment a bit earlier to work around LP: 657086.
  * Be sure to back up in the dbfilter when backing up from the advanced
    partitioning page (LP: #744938).
  * Increase the minimum size of the Ubuntu install to be twice the size
    of the contents of the installation (roughly 5.2 GB) (LP: #745148).

  [ Colin Watson ]