@@ -3,6 +3,8 @@ ubiquity (2.6.3) UNRELEASED; urgency=low
   * Clean up after the langpacks state on multiple runs of the installer.
   * Prefer biggest_free over resize always now that we make sure the
     biggest_free choice offers at least 5GB (LP: #758236, LP: #652852).
+  * Determine the home directory of the target user when copying the
+    network configuration (LP: 745607).
 
  -- Evan Dandrea <ev@ubuntu.com>  Tue, 12 Apr 2011 10:14:14 +0100
 
